# ImageUtils

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
ImageConvertUtils/: .gitignore  build.gradle
ImageConvertUtils/src/androidTest/java/com/yancy/imageconvertutils/: ExampleInstrumentedTest.kt
ImageConvertUtils/src/main/: AndroidManifest.xml
ImageConvertUtils/src/main/cpp/: CMakeLists.txt
ImageConvertUtils/src/main/cpp/imageConvert/: CMakeLists.txt  bitmapConvert.cpp  image.h
ImageConvertUtils/src/main/cpp/libyuv/: CMakeLists.txt
ImageConvertUtils/src/main/java/com/yancy/imageconvertutils/: BitmapConvert.java  ImageConvertUtils.kt
ImageConvertUtils/src/main/jni/: CMakeLists.txt
ImageConvertUtils/src/main/jni/imageConvert/: CMakeLists.txt  bitmapConvert.cpp  image.c  logger.hpp
ImageConvertUtils/src/main/jni/libyuv/: CMakeLists.txt  YuvUtils.cpp
ImageConvertUtils/src/main/res/values/: strings.xml
ImageConvertUtils/src/test/java/com/yancy/imageconvertutils/: ExampleUnitTest.kt
YuvUtils/: .gitignore  build.gradle
YuvUtils/src/androidTest/java/com/yancy/yuvutils/: ExampleInstrumentedTest.kt
YuvUtils/src/main/: AndroidManifest.xml
YuvUtils/src/main/java/com/yancy/yuvutils/: ImageData.kt  ImageUtils.kt  YuvUtils.kt
YuvUtils/src/main/java/com/yancy/yuvutils/annotation/: RotateDegree.java  SupportFilter.java  SupportFormat.java
YuvUtils/src/main/java/com/yancy/yuvutils/entry/: ClipRect.kt  ImageData.kt  ImageInfo.kt
YuvUtils/src/main/jni/: CMakeLists.txt  YuvUtils.cpp  YuvUtils.h  logger.hpp
YuvUtils/src/main/jni/core/: BitmapHelper.cpp  ColorConvert.cpp
YuvUtils/src/main/jni/head/: BitmapHelper.hpp  ColorConvert.hpp  cppToJavaHelper.hpp
YuvUtils/src/main/res/values/: strings.xml
YuvUtils/src/test/java/com/yancy/yuvutils/: ExampleUnitTest.kt
app/: .gitignore  build.gradle
app/src/androidTest/java/com/yancy/imageutils/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yancy/imageutils/: LogUtils.kt  MainActivity.kt  PermissionUtil.kt
app/src/main/java/com/yancy/imageutils/test/: Test.java  Test01.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yancy/imageutils/: ExampleUnitTest.kt
doc/: Android中常用图像格式说明.md  ImageUtils库接口说明文档.md
gradle/wrapper/: gradle-wrapper.properties
libyuv/: readme.md
libyuv/jni/: Application.mk
